--- a/app/src/main/res/layout/fragment_pdf.xml
+++ b/app/src/main/res/layout/fragment_pdf.xml
@@ -9,7 +9,7 @@
        android:id="@+id/tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
-       android:text="ViewPdf"
+       android:text="ViewPdfChanges"
        android:textSize="@dimen/_30sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
